--- a/index.html
+++ b/index.html
@@ -84,17 +84,15 @@
     <!-- About Me Section-->
     <div id="aboutMe" class="section">
       <div class="sectionTitle"><h2>About Me</h2></div>
-      <div class="personalBanner">
-        <div class="profile col-3">
+      <div class="container personalBanner">
+        <div class="profile">
           <img
             id="profileImg"
             class="image-fluid"
             src="./assets/profile.jpg"
             alt="profile photo"
           />
-        </div>
-        <div class="aboutMeText row">
-          <div class="col-md-4">
+          <div class="aboutMeText">
             <p class="lead text-lg-center font-weight-bolder">
               Hello, I'm Aj White. I'm a web development student at
               <a
@@ -108,7 +106,7 @@
               located in central Indiana.
             </p>
           </div>
-          <div class="col-md-7">
+          <div class="container">
             <p class="lead">
               I’ve spent a number of years working across different areas of
               photography and front-end development. I pride myself on being an
@@ -140,6 +138,65 @@
         </div>
       </div>
     </div>
+
+    <!-- <div id="aboutMe" class="section">
+      <div class="sectionTitle"><h2>About Me</h2></div>
+      <div class="personalBanner">
+        <div class="profile container">
+          <img
+            id="profileImg"
+            class="image-fluid"
+            src="./assets/profile.jpg"
+            alt="profile photo"
+          />
+        </div>
+        <div class="aboutMeText row">
+          <div class="container">
+            <p class="lead text-lg-center font-weight-bolder">
+              Hello, I'm Aj White. I'm a web development student at
+              <a
+                class="link"
+                href="https://elevenfifty.org/"
+                style="color: #e33e42"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Eleven Fifty Academy</a
+              >
+              located in central Indiana.
+            </p>
+          </div>
+          <div class="container">
+            <p class="lead">
+              I’ve spent a number of years working across different areas of
+              photography and front-end development. I pride myself on being an
+              avid learner of technology and will not shy away from a new
+              challenge. You can see my code here on
+              <a
+                class="link"
+                style="color: aliceblue"
+                href="https://github.com/xAaronWx"
+                target="_blank"
+                rel="noopener noreferrer"
+                >GitHub</a
+              >. Feel free to contact me at
+              <a
+                class="link"
+                style="color: aliceblue"
+                href="https://www.linkedin.com/in/aaronj-white"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Linkedin</a
+              >.
+            </p>
+            <p class="lead">
+              When not working, I can usually be found spending time with my
+              family, riding in my Jeep, and playing with my dogs. I'm a fan of
+              all things 80's and I make no efforts to hide it.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div> -->
     <!-- Skills Section-->
     <div id="skills" class="section">
       <div class="sectionTitle"><h2>Skills</h2></div>
@@ -281,7 +338,7 @@
             alt="foggy road photo"
           />
         </div>
-        <div class="card text-center">
+        <div class="card text">
           <a
             href="https://xaaronwx.github.io/MyTinDogProject/"
             target="_blank"
