changed form colors

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
     <!-- Navbar -->
     <nav
       id="theNavBar"
-      class="navbar navbar-fixed-top navbar-expand-lg navbar-dark sticky-top bg-transparent"
+      class="
+        navbar navbar-fixed-top navbar-expand-lg navbar-dark
+        sticky-top
+        bg-transparent
+      "
     >
       <div class="d-flex flex-grow-1">
         <span class="w-100 d-lg-none d-block"
@@ -329,7 +333,7 @@
             method="post"
           >
             <fieldset id="fs-frm-inputs">
-              <label for="full-name">Full Name</label>
+              <label style="color: aliceblue" for="full-name">Full Name</label>
               <input
                 class="form-control"
                 type="text"
@@ -338,7 +342,9 @@
                 placeholder="First and Last"
                 required=""
               />
-              <label for="email-address">Email Address</label>
+              <label style="color: aliceblue" for="email-address"
+                >Email Address</label
+              >
               <input
                 class="form-control"
                 type="email"
@@ -347,7 +353,7 @@
                 placeholder="youremail@domain.com"
                 required=""
               />
-              <label for="message">Message</label>
+              <label style="color: aliceblue" for="message">Message</label>
               <textarea
                 class="form-control"
                 rows="5"
