--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
     <!-- Navbar -->
     <nav
       id="theNavBar"
-      class="
-        navbar navbar-fixed-top navbar-expand-lg navbar-dark
-        sticky-top
-        bg-transparent
-      "
+      class="navbar navbar-fixed-top navbar-expand-lg navbar-dark sticky-top bg-transparent"
     >
       <div class="d-flex flex-grow-1">
         <span class="w-100 d-lg-none d-block"
